syntax = "proto3";

option go_package="./pkg/proto";

import "Products.proto";

service Users {
    rpc GetProducts(User) returns (ProductList);
    rpc AddProduct(UserProduct) returns (ProductList);
};

message User {
    string name = 1;
}

message UserProduct {
    User user = 1;
    Product product = 2;
}